--- a/app/src/main/res/layout/notify_design.xml
+++ b/app/src/main/res/layout/notify_design.xml
@@ -12,7 +12,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="95dp"
-        android:background="#07B8BD"
+        android:background="#B440C4FF"
         android:clipToPadding="false"
         android:padding="2dp">
 
@@ -21,6 +21,7 @@
             android:layout_width="370dp"
             android:layout_height="30dp"
             android:layout_marginTop="16dp"
+            android:fontFamily="sans-serif-smallcaps"
             android:text="Project Name"
             android:textColor="@color/black"
             android:textSize="20sp"
@@ -35,6 +36,7 @@
             android:layout_below="@+id/textView5"
             android:layout_marginBottom="4dp"
             android:layout_toRightOf="@id/textView5"
+            android:fontFamily="monospace"
             android:text="Date"
             android:textColor="@color/black"
             android:textSize="15sp"
