--- a/app/src/main/res/layout/activity_mark_slot.xml
+++ b/app/src/main/res/layout/activity_mark_slot.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/bgimage2"
     tools:context=".MarkSlotActivity">
 
     <TextView
@@ -91,6 +92,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="73dp"
         android:text="Mark Slot"
+        app:backgroundTint="#E91E63"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/radioGroup" />
