--- a/app/src/main/res/layout/activity_message_inbox.xml
+++ b/app/src/main/res/layout/activity_message_inbox.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/bgimage2"
     tools:context=".MessageInboxActivity">
 
     <androidx.recyclerview.widget.RecyclerView
