--- a/app/src/main/res/layout/item_design.xml
+++ b/app/src/main/res/layout/item_design.xml
@@ -12,7 +12,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="95dp"
-        android:background="#07B8BD"
+        android:background="#52D81B60"
         android:clipToPadding="false"
         android:padding="2dp">
 
@@ -21,6 +21,7 @@
             android:layout_width="370dp"
             android:layout_height="30dp"
             android:layout_marginTop="16dp"
+            android:fontFamily="cursive"
             android:text="Rehan"
             android:textColor="@color/black"
             android:textSize="20sp"
